# Timetable-VSU-backend

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.local  README.md  docker-compose.yml  redocly.yaml  united_api.yaml  vsu_timetable.code-workspace
.gen/: benchs.txt  objs.txt  service.txt  unittest.txt
.github/workflows/: ci.yml  delete_old_runs.yml  docker.yaml
api/: api.yaml
api/types/: AdminAccount.yaml  AdminFilter.yaml  AuthTokenV1.yaml  Day.yaml  EducationType.yaml  ErrorV1.yaml  FacultyV1.yaml  GroupV1.yaml  Id.yaml  LessonV1.yaml  NumberLesson.yaml  Subgroup.yaml  TeacherInfo.yaml  TeacherV1.yaml  Timestamp.yaml  TypeOfLesson.yaml  TypeOfWeek.yaml  UserCredentialV1.yaml  UserTypeV1.yaml  UserV1.yaml
api/views/get-timetable/: Request.yaml  view.yaml
api/views/login/: ResponseV1.yaml  view.yaml
api/views/register/: RequestV1.yaml  view.yaml
benchs/: hello_benchmark.cpp
configs/: config_vars.docker.yaml  config_vars.yaml  config_vars_testing.yaml  dynamic_config_fallback.json  static_config.yaml.in
configs_testing/: config_vars_testing.yaml
dependencies/: python.md  ubuntu-22.04.md
postgresql/data/: initial_data_auth.sql  initial_data_auth_admin.sql  initial_data_auth_admin_token.sql  initial_data_auth_root.sql  initial_data_auth_root_token.sql  initial_data_auth_teacher.sql  initial_data_auth_teacher_token.sql  initial_data_auth_user.sql  initial_data_auth_user_token.sql  initial_data_timetable1.sql  initial_data_timetable2.sql  timetable_random.sql
postgresql/schemas/: db_1.sql
postgresql/schemas/db_1/: 000_init.sql  001_hello.sql  002_add_lesson_filter.sql  003_add_user.sql  004_cascade_delete_on_token.sql  005_add_admin_account.sql  006_unique_login_user.sql  007_add_admin_filter.sql  008_add_teacher_filter.sql  009_lesson_filter_change_uuid_to_text.sql  010_admin_filter_change_uuid_to_text.sql  011_create_requests.sql  012_add_teacher_info.sql  013_add_faculty.sql  014_add_group_stage_filter.sql  auth.sql  vsu_timetable.sql
scripts/: format_includes.py  generate_all_headers.py  generate_sql_queries.py  merge_yaml.py
service/: main.cpp
src/api/: api.yaml
src/api/types/: Day.yaml  ErrorV1.yaml  GroupV1.yaml  LessonV1.yaml  Subgroup.yaml  Timestamp.yaml  UserTypeV1.yaml
src/codegen/: sql.cpp  sql.hpp
src/components/controllers/: token_controller.cpp  token_controller.hpp  token_controller_fwd.cpp  token_controller_fwd.hpp  user_controller.cpp  user_controller.hpp  user_controller_fwd.cpp  user_controller_fwd.hpp
src/controllers/lesson/: controller.cpp  controller.hpp  controller_fwd.hpp
src/controllers/token/: controller.cpp  controller.hpp  controller_fwd.hpp
src/controllers/user/: controller.cpp  controller.hpp  controller_fwd.hpp
src/helpers/: lesson_converter.hpp
src/http/: ErrorV1.hpp  handler_parsed.hpp  legacy_handler_parsed.hpp
src/models/admin_account/: postgre.hpp  type.hpp
src/models/admin_filter/: fwd.hpp  postgre.hpp  type.hpp
src/models/auth_token/: serialize.hpp  type.hpp
src/models/day/: all.hpp  parse.cpp  parse.hpp  postgre.hpp  serialize.cpp  serialize.hpp  type.hpp
src/models/education_type/: all.hpp  parse.cpp  parse.hpp  postgre.hpp  serialize.cpp  serialize.hpp  type.hpp
src/models/error_v1/: type.hpp
src/models/faculty/: fwd.hpp  postgre.hpp  type.hpp
src/models/faculty_filter/: fwd.hpp  postgre.hpp  type.hpp
src/models/group_stage/: fwd.hpp  postgre.hpp  type.hpp
src/models/group_stage_filter/: fwd.hpp  postgre.hpp  type.hpp
src/models/lesson/: type.hpp
src/models/lesson_filter/: fwd.hpp  postgre.hpp  postgres.hpp  type.hpp
src/models/lesson_type/: all.hpp  parse.cpp  parse.hpp  postgre.hpp  serialize.cpp  serialize.hpp  type.hpp
src/models/lesson_v1/: parse.hpp  postgre.hpp  serialize.hpp  type.hpp
src/models/lesson_week_type/: all.hpp  parse.cpp  parse.hpp  postgre.hpp  serialize.cpp  serialize.hpp  type.hpp
src/models/lesson_with_details/: postgre.hpp  serialize.hpp  type.hpp
src/models/register_request/: fwd.hpp  type.hpp
src/models/request_privileges/: fwd.hpp  type.hpp
src/models/subgroup/: all.hpp  parse.cpp  parse.hpp  postgre.hpp  serialize.cpp  serialize.hpp  type.hpp
src/models/substring/: all.hpp  fwd.hpp  parse.cpp  parse.hpp  postgre.hpp  serialize.cpp  serialize.hpp  type.hpp
src/models/teacher/: postgre.hpp  type.hpp
src/models/teacher_filter/: fwd.hpp  postgre.hpp  type.hpp
src/models/teacher_info/: parse.hpp  postgre.hpp  serialize.hpp  type.hpp
src/models/timestring/: all.hpp  fwd.hpp  parse.cpp  parse.hpp  postgre.hpp  serialize.cpp  serialize.hpp  type.hpp
src/models/user/: postgre.hpp  postgres.hpp  serialize.hpp  type.hpp
src/openapi/: all.hpp
src/sql/: get_lessons_by_filter.sql
src/utils/: common_errors.hpp  compilers_macros.hpp  component.hpp  component_list_fwd.hpp  constexpr_optional.hpp  constexpr_string.hpp  formated_exception.hpp  initialize_dependents.hpp  is_complete_type.hpp  json_type.cpp  json_type.hpp  meta.hpp  perform_common_errors.cpp  perform_common_errors.hpp  pg_controller.hpp  postgres_helper.hpp  shared_transaction.hpp  tests_macros.hpp  type_holder.hpp
tests/: CMakeLists.txt  __init__.py  conftest.py  pytest.ini  requirements.txt
tests/get-timetable/: get_timetable_data.py  test_get_timetable_basic.py
tests/hello/: test_hello_basic.py
tests/login/: conftest.py  test_login_basic.py
tests/register/: conftest.py  test_register.py
tests/teacher/: conftest.py
utests/: convert_test.cpp  dropper.cpp  dropper_additional.cpp  hello_test.cpp  remove_namespace.cpp  test_ct.cpp
(+597 files in other folders)
